docs(content): Update GAME daily report for 2025-12-02

--- a/game/2025/12/02.md
+++ b/game/2025/12/02.md
@@ -1,17 +1,190 @@
 # 🎮 游戏行业速递 - 2025年12月02日
 
-## 郭炜炜卸任西山居CEO转任首席制作人：《解限机》失利后的产品突围与组织重构
+## 西山居战略转型：郭炜炜从CEO回归首席制作人，管理与创作分离背后的产品导向战略
+
+> **分类：** 公司动态
+> **来源：** [游民星空](https://mp.weixin.qq.com/s/OaI2_Faxm1Kb2GTfg71FVw) 、 [游戏茶馆](https://mp.weixin.qq.com/s/YuS0Rx4x5Wk0F2AqPLCJ4w) 、 [游戏新知](https://mp.weixin.qq.com/s/cCn6si-ICvS6UaQuQyl-KA) 、 [游戏陀螺](https://mp.weixin.qq.com/s/40tX2U9XskrwwQJNbr-ZlQ) 、 [游戏葡萄](https://mp.weixin.qq.com/s/aIE26wBUJz-VSRFtv0IqUg)
+
+**核心洞察：** 西山居的这次高管变动揭示了中国游戏行业正在经历的一次重要转型——从规模扩张驱动向产品质量驱动的战略转变。在游戏市场竞争加剧、增长放缓的背景下，将管理与创作职能分离，让核心创意人才回归一线，已成为老牌游戏企业应对挑战的关键策略。这种「双轨制」组织模式不仅是对人才专长的最优配置，更反映了游戏公司对产品力的重新聚焦。郭炜炜从CEO转为专注首席制作人的决策，既是个人专业回归，也是企业在精品化竞争时代对核心IP和产品质量的战略性投入。对整个行业而言，这一趋势预示着中国游戏公司可能正从粗放增长阶段进入精品研发的深耕期，管理者与创作者角色的明确分工将成为提升产品竞争力的组织保障。
+**内容简介：**
+
+- 核心人事变动：郭炜炜因个人职业规划辞去西山居CEO职务，但继续担任首席制作人，专注于产品研发与内容创作，直接向新任代理CEO汇报工作。
+- 新任领导安排：金山软件CEO兼西山居董事长邹涛接任西山居代理CEO，形成新的管理结构，体现母公司对西山居业务的重视。
+- 调整背景分析：同时担任CEO和制作人双重职务占用郭炜炜大量精力，此次调整有利于其聚焦产品研发，体现了西山居对专业分工的重视。
+- 郭炜炜个人背景：曾主导《剑网3》系列开发，是西山居的核心创意人物，此次转型意味着其从管理岗位回归创作一线。
+- 业绩表现压力：此次高层调整或与金山软件Q3财报表现不佳有关，网络游戏及其他业务收入同比下降47%至8.98亿元，占总收入比重为37%。
+- 业绩下滑原因：根据邹涛解释，收入下滑主要由于现有游戏收益贡献减少，新上线游戏尚处于发展初期，市场影响力仍在建立中。
+- 行业环境挑战：游戏行业正处于机遇与挑战并存阶段，玩家对优质内容需求升级，全平台布局与文化出海成为新增长点，但市场竞争日趋激烈。
+- 未来发展战略：西山居将继续聚焦核心主业，依托「剑侠情缘」等优质IP矩阵、技术沉淀及战略资源优势，持续打磨产品品质、创新内容体验，应对行业变革与市场竞争。
+
+---
+
+## 《球比伦战记》：从虚假广告美学到真实爆款，一款三阶段进化的独立游戏奇迹
+
+> **分类：** 产品情报
+> **来源：** [游戏研究社](https://mp.weixin.qq.com/s/fQHEYXwwOnsThurYxXGCKg)
+
+**核心洞察：** 《球比伦战记》的成功揭示了一种反直觉的游戏设计哲学：不是通过无限延长游戏寿命来留住玩家，而是精准把握玩家在不同阶段的心理需求，主动设计游戏形态的转变与内容的「燃尽」。这种「有计划的内容消耗」策略，让玩家能在每个阶段都获得最佳体验，并最终带着满足感而非遗憾离开游戏。这一设计思路对独立游戏开发者提供了宝贵启示：有时候，一款成功的游戏不仅要让玩家欲罢不能地点进来，也要让他们心满意足地关掉它。
+**内容简介：**
+
+- 爆款现象：《球比伦战记》作为一款结合肉鸽要素的打砖块游戏，发售一个多月销量破百万，被提名TGA年度独立游戏和Steam Deck最佳游戏，其视觉风格与社交媒体虚假游戏广告极为相似。
+- 游戏设计三阶段进化：游戏巧妙地实现了从前期肉鸽弹球、中期经营收集到后期挂机收菜的完整体验转变，每个阶段满足不同玩家需求。
+- 「吸血鬼幸存者like」核心：游戏借鉴了《吸血鬼幸存者》的经验值与升级系统，通过「越杀越强、越强越能杀」的正向循环创造爆炸式正反馈。
+- 极致爽快感设计：各种弹球技能（射出极光、穿透砖块、自我复制等）叠加产生夸张视觉效果，满足玩家对割草快感的追求。
+- 局外成长系统：游戏将传统的点点点升级改造为城镇建设型迷你弹球游戏，玩家需要发射弹珠撞击建筑收集资源，巧妙延长了游戏寿命。
+- 有意识的内容消耗：开发者Kenny不追求无限重玩性，而是有意识地让玩家快速体验游戏全部内容并获得圆满结局，避免玩家带着遗憾离开。
+
+---
+
+## 《新闻塔》：从大萧条到二战，一款游戏揭示媒体权力与社会变革
+
+> **分类：** 产品情报
+> **来源：** [游民星空](https://mp.weixin.qq.com/s/y3HvAXZJIHyUdeJenw8WOg)
+
+**核心洞察：** 《新闻塔》不仅是一款模拟经营游戏，更是对媒体权力本质的深刻剖析。它通过重现1930年代美国大萧条时期的新闻业变革，揭示了媒体如何在社会动荡期成为权力角逐的战场。游戏巧妙地将当时的「小报文化」与当代社交媒体、算法推送、AI生成内容等现象进行平行对比，提醒我们媒介形态虽在变化，但信息操控与舆论引导的本质并未改变。这种历史与现实的映射，为玩家提供了思考媒体责任与社会信息生态的独特视角。
+**内容简介：**
+
+- 游戏概念与背景：《新闻塔》以1929年大萧条为起点，让玩家扮演小报社继承人，在美国新闻业「最疯狂」的时代打造媒体帝国，见证历史变革。
+- 多层次游戏系统：结合基地建造与经营模拟，玩家需管理报社布局、招募员工、引入新技术，并通过周循环制作报纸，平衡权威性与耸动性。
+- 历史事件重现：游戏融入林白小鹰绑架案、卡朋被捕、罗斯福上台等真实历史事件，玩家通过报道选择影响社会舆论。
+- 权力网络模拟：玩家需与市长、黑手党、名流、将军等势力周旋，完成各方议程，体验媒体作为「第四权力」的影响力。
+- 媒体变革映射：游戏通过1930年代新闻业的变革，隐喻当代媒体生态的转型与挑战，从传统报业到社交媒体再到AI生成内容的演变。
+- 传播学思考：重新审视「魔弹论」在当代信息茧房时代的应用价值，探讨媒介技术与社会道德发展不平衡的问题。
+
+---
+
+## 货币战争：《崩坏：星穹铁道》3.7版本的自走棋创新与玩法突破
+
+> **分类：** 产品情报
+> **来源：** [游戏葡萄](https://mp.weixin.qq.com/s/HvsPZWWC_ZMC6YLASMgHOQ)
+
+**核心洞察：** 米哈游通过货币战争这一创新玩法，展示了其在游戏设计领域的成长与突破。这种将成熟玩法框架与自身游戏核心机制有机融合的方式，不仅解决了内容型游戏在长草期的体验问题，更为行业提供了一种新的玩法融合思路：保留核心战斗体验的同时，借用外部成熟系统并进行创造性改造，可以在不改变游戏本质的前提下，大幅拓展游戏的策略深度和可玩性。这种「有机融合」而非「简单嫁接」的设计哲学，或将成为二次元游戏持续创新的重要方向。
+**内容简介：**
+
+- 创新玩法设计：货币战争基于星铁回合制战斗核心，融合自走棋经济系统与肉鸽模式，创造出独特的单机策略体验，成为3.7版本最大亮点。
+- 巧妙系统融合：保留了自走棋的费用、利息、羁绊、装备合成等经济系统，同时创新性地设计前台战斗角色与后台支援角色的搭配机制，降低了理解门槛。
+- 多样策略空间：游戏提供12种阵营羁绊和11种流派羁绊，结合星铁原有角色机制，催生出「阿格莱雅轮椅流」、「白厄轮椅流」等众多创意构筑，极大丰富了策略深度。
+- 单机化改造：摒弃传统自走棋PvP模式，改为三阶段线性关卡流程，引入词缀效果替代玩家对抗，让策划能放开手脚设计更夸张的强化体验。
+- 与剧情巧妙结合：玩法设计与游戏角色背景和版本剧情紧密结合，如砂金的赌博特性、昔涟的诗篇机制等，让机制设计富有叙事意义。
+- 长线价值：作为一种可持续扩展的玩法，货币战争有望成为星铁新的玩法支柱，帮助游戏在二游长线运营中保持竞争力。
+
+---
+
+## 冰川网络孵化中心：从《X-Clash》50国榜首看融合2.0爆款孵化机制
+
+> **分类：** 公司动态
+> **来源：** [游戏茶馆](https://mp.weixin.qq.com/s/8c1kbR7KxN5cHT_LM5bABw)
+
+**核心洞察：** 冰川网络成功将「玩法融合」从单点尝试升级为体系化能力，将「项目孵化」从依靠运气转变为依靠机制，其「融合2.0」模式通过「魔性带量元素+复玩结构+成熟商业化内核」的组合，不仅解决了买量成本问题，更创造了真正好玩且商业化潜力强的产品。其「快速开发、快速测试」的孵化机制，以及将立项视为决定项目70%成败的理念，为中小游戏公司提供了一套可借鉴的爆款孵化方法论。
+**内容简介：**
+
+- 爆款成绩：冰川网络《X-Clash》单月下载量2220万次、流水1300万元，登顶近50国iOS免费榜，跻身全球手游下载榜TOP4。
+- 玩法融合升级：从「融合1.0」的硬嫁接模式升级至「融合2.0」，副玩法不再独立于主玩法，而是与核心玩法深度绑定，实现「好玩带量」的双重效果。
+- 孵化中心组织架构：采用「能力中心+创意蜂群」的网状组织结构，能力中心提供专业支持，创意蜂群灵活组合，最大化提升立项成功率。
+- 四步孵化流程：从核心成员评估、中心试玩、公司层面试玩到外部测试，每步都有明确验证目标，次留50%是基本好玩标准。
+- 「50-50计划」：年内将产出约50款内部Demo，为潜力项目提供「启动包」，让团队专注打磨玩法而不必担忧资金问题。
+- 全平台布局策略：根据产品特性选择合适渠道，最终实现全平台覆盖，而非为特定平台硬改产品。
+
+---
+
+## 游戏行业人才困境：细分岗位与缺失培养体系下的创作迷茫
+
+> **分类：** 市场分析
+> **来源：** [触乐](https://mp.weixin.qq.com/s/kH9u5zHIRxL97Yy-2HF3Vg)
+
+**核心洞察：** 游戏行业正面临人才培养与创意生产之间的结构性矛盾：一方面项目规模和复杂度不断提升要求更专业的分工，另一方面过度细分的岗位却阻碍了全局视野的形成。这种矛盾导致行业人才梯队断层，缺乏既懂创作又熟悉全流程的中坚力量。长期来看，这不仅影响个人职业发展，也将制约整个行业的内容创新能力和可持续发展。游戏公司亟需建立系统化的人才培养机制和职业发展路径，平衡专业分工与全局视野的关系，才能突破当前的人才困境。
+**内容简介：**
+
+- 行业现状：多位一线研发反映入行后「越做越迷茫」，缺乏系统指导和职业成长路径，这已成为普遍现象而非个例。
+- 新人困境：新入职员工往往得不到系统培训，只能依靠「经验」而非「知识」摸索，缺乏明确的项目风格指导和标准化评价体系。
+- 结构性问题：游戏项目组普遍存在内容生产压力大、岗位过度细分、评价体系缺失等问题，导致新人难以获得全面成长。
+- 人才瓶颈：真正能独立完成所有内容的「资深研发」极为稀缺，一个项目组中通常不超过5人，且多靠「运气」获得全面经验。
+- 恶性循环：行业陷入「经验驱动」而非「理论驱动」的困境，新人成长依赖运气和领导个人风格，而非系统化培养。
+- 职业困境：晋升机制往往导致有能力者脱离一线创作，与个人创作追求背道而驰，使怀揣创作梦想的人尤感迷茫。
+
+---
+
+## 郭炜炜卸任西山居CEO转任首席制作人：《解限机》失利后的产品突围与人才策略调整
 
 > **分类：** 公司动态
 > **来源：** [GameLook](https://mp.weixin.qq.com/s/Hy9BLp4mGGHrtr3QGkF3Iw) 、 [游戏新知](https://mp.weixin.qq.com/s/3Rm4-LbP18BQ2qkOm0K7ig)
 
-**核心洞察：** 郭炜炜从CEO回归制作人的转变，揭示了游戏行业面临产品危机时的一种典型组织应对策略：将核心创意人才从行政管理中解放出来，重新聚焦产品创新。这一「管理者回归创作一线」的模式反映了游戏公司对「管理型人才」与「创作型人才」角色定位的重新思考，意在通过组织结构优化来应对市场挑战。然而，这种战术调整能否真正解决根本问题，不仅取决于人才的重新定位，还需要公司在产品定位、研发流程和市场洞察等方面进行更深层次的变革。《解限机》的后续表现将成为验证这种人才策略有效性的关键案例，也为行业提供了在产品危机时期如何平衡管理与创意的重要参考。
+**核心洞察：** 郭炜炜从CEO回归制作人的转变，揭示了游戏行业在产品危机时刻的一种典型应对策略：将核心创意人才从行政管理中解放出来，重新聚焦产品创新。这一「管理者回归创作一线」的模式反映了当下游戏公司对人才角色定位的重新思考，即在业绩压力下，如何平衡管理效率与创意产出。然而，这种组织结构调整能否真正解决《解限机》的根本问题，仍取决于公司是否能在产品定位、市场洞察和研发流程上进行更深层次的变革。对行业而言，西山居的这一案例提供了宝贵参考：当旗舰产品遭遇市场挫折时，除了常规的产品调整外，重新思考人才配置与组织架构，可能是扭转颓势的关键一环。
 **内容简介：**
 
-- 高层人事变动：郭炜炜因个人职业规划辞去西山居CEO职务，将继续担任首席制作人，直接向金山软件CEO兼西山居董事长邹涛汇报工作，邹涛接任西山居代理CEO。
-- 业绩压力背景：变动与金山游戏业务表现不佳高度相关，Q3游戏收入8.98亿元，同比下降47%，主要受《剑网3》和《尘白禁区》收入下滑影响，Q2财报已显示游戏业务营收同比下滑。
-- 《解限机》项目困境：该游戏由郭炜炜亲自带队开发近10年，经历4次立项，公测后最高同时在线人数仅13万左右，远低于测试期的30万，目前Steam在线人数已降至2000-4000人左右，好评率仅60%左右，网传项目存在巨额亏损。
+- 高层人事变动：郭炜炜因个人职业规划辞去西山居CEO职务，但将继续担任首席制作人，直接向金山软件CEO兼西山居董事长邹涛汇报工作，后者接任西山居代理CEO。
+- 业绩压力背景：变动与金山游戏业务表现不佳高度相关，Q3游戏收入8.98亿元，同比下降47%，主要受《剑网3》和《尘白禁区》收入下滑影响，Q2财报已显示游戏业务营收同比下滑趋势。
+- 《解限机》项目困境：该游戏由郭炜炜亲自带队开发近10年，经历4次立项，七月公测后表现不及预期，最高同时在线人数仅13万左右，远低于测试期的30万，目前Steam在线人数已降至2000-4000人左右，好评率仅60%，网传项目存在巨额亏损。
 - 产品挽救计划：郭炜炜公开承认游戏在玩法与机甲爱好者需求匹配度不足的问题，曾于11月发布公开信，计划年底前明确开发方向，推出「解限版」并扩展至PS5等平台，并在一周年时推出「真正意义上的新《解限机》」。
-- 战略转型思考：西山居进入三十周年之际，内部邮件提及行业正处于机遇与挑战并存阶段，此次人事调整被视为「解放生产力」，使郭炜炜能更专注于游戏制作，金山游戏业务预计明年将进入新产品密集爆发期。
+- 战略调整思路：此次人事变动被视为「解放生产力」，使郭炜炜能卸下管理职责，更专注于游戏制作，探索西山居未来发展方向，公司将进一步聚焦产品和玩家体验，金山游戏业务预计明年将进入新产品密集爆发期。
 
 ---
+
+## 腾讯FC足球系列战略升级：齐达内代言引领的轻量化转型与本土化创新
+
+> **分类：** 产品情报
+> **来源：** [游戏研究社](https://mp.weixin.qq.com/s/RdDefg9tcYoM0X-VhNErAg) 、 [游戏新知](https://mp.weixin.qq.com/s/fU2qoZUn6ejw7LnAv_d5EQ)
+
+**核心洞察：** 腾讯FC足球系列的战略转型揭示了体育类游戏的发展新趋势：从「专业模拟」向「娱乐体验」的演进。面对体育游戏普遍存在的高门槛问题，腾讯采取了「球星IP+创新玩法+本土化」的三重策略：通过齐达内等顶级球星提升品牌调性；引入麻将等中国特色休闲玩法降低入门门槛；推出轻量化新产品满足碎片化游戏需求。这种「硬核+休闲」的双轨并行策略，既维系了核心玩家的专业需求，又扩大了用户基础，为同质化严重的体育类游戏市场提供了差异化竞争的新思路。这一案例表明，在体育游戏领域，用户规模而非纯粹的专业度可能成为未来竞争的关键指标，而本土化创新则是打开市场的重要钥匙。
+**内容简介：**
+
+- 明星代言战略：腾讯FC品类游戏延续年度嘉年华传统，继去年贝克汉姆后，今年邀请足球传奇齐达内担任品牌代言人，现场皇马粉丝特别准备TIFO巨幅横幅致敬，引发球迷热烈反响。
+- 产品功能创新：《FC ONLINE》新增「自定义中心」功能，支持最多6V6对战，允许玩家自建房间、自定规则；《FC足球世界》推出「一代宗师」活动及149能力值齐达内签名球星卡，同时上线「宗师牌谱」麻将式小游戏。
+- 玩法轻量化转型：通过引入麻将等中国特色休闲玩法，打破传统足球游戏模式，降低游戏门槛，吸引非核心玩家群体，体现从硬核向休闲易上手方向的战略转变。
+- 产品线扩展：发布全新游戏《FC足球梦剧场》，采用类《足球经理》的经营模式，但更强调轻量化体验和48倍速的快节奏玩法，专为碎片时间设计。
+- 用户互动与粘性：活动组织「齐祖荣耀队」和「齐祖传奇队」玩家对战，增强粉丝参与感，活动结束后玩家仍在讨论盛况，有玩家当场开启游戏，显示FC品类游戏的用户粘性。
+
+---
+
+## 2025年12月游戏市场爆发：主机大作与手游新品双线布局，厂商抢占年末寒假消费高峰
+
+> **分类：** 产品情报
+> **来源：** [游民星空](https://mp.weixin.qq.com/s/9peKiYllyjdeghDgeVqkAQ) 、 [游戏陀螺](https://mp.weixin.qq.com/s/JbkipdO1L7VrSaS2GexUJg)
+
+**核心洞察：** 2025年12月游戏市场的「双线爆发」现象揭示了游戏行业对年末假期消费高峰的战略布局。主机/PC端与移动端虽然目标群体有所区隔，但都呈现出三个共性特征：一是「时间窗口竞争」，厂商精准卡位寒假前夕以抢占用户时间；二是「多元差异化竞争」，通过IP授权、技术创新和品类多样性构建产品壁垒；三是「平台过渡期策略」，主机厂商采取跨代兼容以应对硬件更迭，移动端则通过测试节奏把控降低发行风险。对游戏从业者而言，这种高度竞争的市场环境下，单纯依靠内容质量已不足以保证成功，如何在产品定位、发行时机和用户获取策略上形成协同效应，将成为决定年末档期胜负的关键。
+**内容简介：**
+
+- 市场整体态势：2025年12月游戏市场迎来年末发行高峰，主机/PC端有《艾尔登法环：黑夜君临》DLC、《八方旅人0》等重磅作品，移动端将有28款新游上线，另有16款产品处于测试阶段，多平台全面爆发。
+- 主机游戏市场亮点：多款大作采取PC与主机同步发行策略，《银河战士Prime 4》支持Switch2，显示行业正处于平台过渡期，开发商采取「跨代兼容」策略以最大化用户基数。
+- 移动游戏市场布局：腾讯推出《洛克王国：世界》和《全明星觉醒》两款新作；金山世游与虎牙联手的《鸭鹅杀》定档12月18日；B站的《嘟嘟脸恶作剧》同日上线，预约量已超150万；网易《代号：妖鬼》和仙峰游戏的《九牧之野》将开启测试。
+- 品类与技术创新：卡牌类以9款新作成为移动端最受欢迎品类，SLG、竞速、派对、Roguelike等类型均有代表作；《洛克王国：世界》首次采用虚幻4引擎打造3D大世界；独立游戏方面，《UNBEATABLE》以日式动画风格结合节奏玩法，《蛮荒计划》融合FPS与恐龙生存元素。
+- 头部产品表现：《失控进化》预约量已突破2000万；《暗黑破坏神4》将于12月12日登陆国服PC平台；《全明星觉醒》获SNK多系列IP授权；《仙境传说：重生》为GRAVITY正版授权MMORPG，显示IP授权成为重要竞争策略。
+
+---
+
+## 4399新游领衔11月出海买量高潮：中国厂商海外广告投放创年度新高
+
+> **分类：** 市场分析
+> **来源：** [DataEye游戏观察](https://mp.weixin.qq.com/s/Tgs3iwCbnWH6lEk5jq5Tyg)
+
+**核心洞察：** 2023年末中国游戏出海呈现「规模扩张+战术精细化」双轨并行的趋势。一方面，出海投放总量创新高反映了厂商加速全球化布局的决心；另一方面，各区域市场的投放策略已形成明显差异化，如美国市场以益智休闲为主，东亚市场则更注重IP与品类匹配。4399等中小厂商通过精准的区域定制策略（如针对台湾市场的塔防+捉鬼题材）取得突破，表明在全球化竞争中，理解区域文化偏好并进行针对性产品设计与营销已成为出海成功的关键因素。
+**内容简介：**
+
+- 全球广告投放市场活跃度攀升：11月全球投放手游数超5.4万款，广告素材数达288万款，创年内新高，视频类素材占比高达86%。
+- 中国出海投放规模创新高：11月大陆出海投放手游数达3429款，素材数超53万组，均为年内单月最高，IAP产品占比63%，混合变现产品占31%。
+- 市场布局与品类分布：美国、巴西和日本持续为中国厂商海外投放三大主力市场；角色扮演、超休闲和模拟游戏占据品类前三，热门品类格局相对固化。
+- 区域市场特点分析：美国市场素材投放首破百万组，竞争激烈；日本市场中国厂商占据半壁江山；韩国市场武侠/三国题材游戏表现亮眼；台湾市场MMORPG类游戏投放力度大。
+- 4399新游表现抢眼：《英雄来搞鬼：方房间保卫战》10月底上线，11月在台湾市场投放素材超2000组，塔防+捉鬼题材迎合当地用户喜好。
+- 12月值得关注新游：《零始之门》《Crossfire: Legends》《星痕共鸣》《스칼렛 판타지아》《信長之野望 真战》等将在不同海外市场上线。
+
+---
+
+## 其他相关资讯
+
+- [《艾尔登法环：黑夜君临》DLC深度解析：全新大空洞地图与双职业渡夜者带来的战术革新](https://mp.weixin.qq.com/s/CD87NemqUiWGj_fFKSDmng)
+- [独立游戏营销指南：海外游戏展示活动成本与投资回报分析](https://mp.weixin.qq.com/s/Uc-H-gvK6VLARVPOUNzArg)
+- [徽章系统的设计与价值：《糖果传奇》如何通过收藏机制提升玩家黏性](https://mp.weixin.qq.com/s/Rc-I_aDpifWb1Gxz37HqRg)
+- [韩国网禅因《奇迹天使》抽卡概率造假被重罚1.58亿韩元](https://mp.weixin.qq.com/s/IjD54Xb3ZPF6qqp2kgJgow)
+- [67岁卡普空老将复出：《生化危机：生存小队》突破200万下载，IP跨界SLG的创新尝试](https://mp.weixin.qq.com/s/oO04_1WtHOy7Eqj5NqgDIQ)
+- [《超自然行动组》：微恐游戏黑马如何撬动行业新赛道](https://mp.weixin.qq.com/s/Wb0jYsLnuHbewx4HiG278A)
+- [AI涩图设定图泛滥：从表面诱惑到创作民主化的双刃剑](https://mp.weixin.qq.com/s/0f376hKjkUkboJy3CFOhIQ)
+- [三七互娱战略布局：投资前FunPlus制作人崔兵新创公司，加码休闲游戏出海赛道](https://mp.weixin.qq.com/s/3VXC1zoeHdciaObJ7K2zEA)
+- [《永恒之塔》电竞化运营：以APL赛事构建经典MMORPG的IP焕新之路](https://mp.weixin.qq.com/s/F1S4JyBvexzRg-mnCMaxhw)
+- [《Warframe》年度资料片「旧日和平」：新战甲、新武器与多平台战略](https://mp.weixin.qq.com/s/Oa00yVZlr5DdUCAH7CgxYQ)
+- [《燕云十六声》海外爆火：900万玩家、Steam热销榜第3，网易武侠IP出海的突破性成功](https://mp.weixin.qq.com/s/wQzG7vpSahTd2U6cOWpbcQ)
+- [小游戏市场11月报告：IAA新品类崛起，箭头解谜与多元玩法成新趋势](https://mp.weixin.qq.com/s/dWcVTYvVf1NA66GswCv_9w)
+- [游戏玩家的日常：当游民星空的梗图成为解压神器](https://mp.weixin.qq.com/s/3CtggkSnltQc2jmbwnPJ1g)
+- [西山居CEO郭炜炜辞职与《太吾绘卷》延期：游戏行业人事与产品动态速览](https://mp.weixin.qq.com/s/JjBgnu2IgibChzD5_Zc7Kg)
+- [蔡浩宇公司推出聊天AI「AnuNeko」：猫咪风格对话机器人的功能与局限](https://mp.weixin.qq.com/s/1d8xvF8ivey4lnYi7vwJAQ)
+- [微信小游戏开发者通过WeCare公益计划为香港大火捐款超560万](https://mp.weixin.qq.com/s/OD1l3xjxCohDgMh4jAgSlg)
+- [12月1日开测：《斗罗大陆：诛邪传说》推出自由冒险新玩法](https://mp.weixin.qq.com/s/aR3cC1K0daeg6TeNha1j5Q)
